Replace Guava class with Java built-in one